Showing the value into the table

--- a/app/templates/market.html
+++ b/app/templates/market.html
@@ -52,10 +52,10 @@
             <!-- Your rows HERE! -->
             {% for item in items %}
                 <tr>
-                    <td>{{ item.id }}</td>
-                    <td>{{ item.name }}</td>
-                    <td>{{ item.barcode }}</td>
-                    <td>{{ item.price }}</td>
+                    <td>{{item.ID}}</td>
+                    <td>{{item.Name}}</td>
+                    <td>{{item.Barcode}}</td>
+                    <td>{{item.Price}}</td>
                 </tr>
             {% endfor %}
         </tbody>
